--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Yarnea – Handmade Crochet</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -20,7 +21,7 @@
   <!-- HERO SECTION -->
   <section class="hero hero-full">
     <div class="hero-content">
-      <h1>Handmade Crochet Creations 🧶</h1>
+      <h1>Handmade Crochet Creations</h1>
       <p>
         Crafted with love, patience & creativity.  
         Discover unique handmade crochet pieces made just for you.
