--- a/products.html
+++ b/products.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Products | Yarnea</title>
   <link rel="stylesheet" href="style.css" />
 </head>
