--- a/explore.html
+++ b/explore.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 <title>Explore | 🧶yarnea</title>
 
 <style>
@@ -181,10 +182,10 @@ footer{
 <body>
 
 <header>
-  <h2>🧶 Yarnea</h2>
+  <h2>🧶 yarnea</h2>
   <nav>
-    <a href="index.html">🏚️Home</a>
-   <a href="products.html">👜shop</a>
+    <a href="index.html">Home</a>
+   <a href="products.html">shop</a>
   </nav>
 </header>
 
